# CalHacks

./: .gitignore  ArmControlExample.py  ServoController.py  diff_train.py  diffusion_augmentation.py  diffusion_sampler.py  findMic.py  mic_input.py  pyaudio_reqs.sh  pyproject.toml  requirements.txt  slurm-1634422.out  slurm-1634423.out  slurm-1634424.out  slurm-1634427.out  ssm_cls_head.py  train.sh  train_classifier.py  tts.py  tts.sh
backend/: main.py  requirements.txt
frontend/app/: globals.css  layout.tsx  page.tsx
