[project]
name = "calhacks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hf-transfer>=0.1.9",
    "librosa>=0.11.0",
    "peft>=0.17.1",
    "pyserial>=3.5",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.0",
    "transformers>=4.57.1",
]
